# twizzler

./: .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.lock.orig  Cargo.toml  Cargo.toml.wasm  LICENSE  Makefile  README.md  bacon.toml  flake.nix  init.sh  kani_test.sh  run.txt  run_test.sh  run_test_suite.sh  rust-toolchain  start.sh
src/kernel/: Cargo.toml  Cargo.toml.orig  updates.txt
src/kernel/.cargo/: config.toml
src/kernel/macros/: Cargo.toml
src/kernel/macros/src/: lib.rs
src/kernel/src/: clock.rs  condvar.rs  crypto.rs  device.rs  idcounter.rs  image.rs  initrd.rs  instant.rs  interrupt.rs  log.rs  main.rs  mutex.rs  once.rs  operations.rs  pager.rs  panic.rs  panic.rs.orig  processor.rs  queue.rs  rand.rs  rwlock.rs  sched.rs  security.rs  spinlock.rs  thread.rs  time.rs  trace.rs  userinit.rs  utils.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/aarch64/: address.rs  cntp.rs  context.rs  exception.rs  image.rs  interrupt.rs  lapic.rs  memory.rs  mod.rs  processor.rs  start.rs  syscall.rs  thread.rs
src/kernel/src/arch/amd64/: acpi.rs  address.rs  context.rs  desctables.rs  gdt.rs  image.rs  interrupt.rs  interrupts.rs  ioapic.rs  lapic.rs  memory.rs  mod.rs  pagetables.rs  pit.rs  processor.rs  start.rs  syscall.rs  thread.rs  tsc.rs
src/kernel/src/debug/: mod.rs  terminal.rs
src/kernel/src/machine/: mod.rs  time.rs
src/kernel/src/machine/arm/: linker.ld  (+3 more)
src/kernel/src/memory/: address.rs  allocator.rs  allocator.rs.orig  context.rs  fault.rs  frame.rs  map.rs  mod.rs  pagetables.rs  tracker.rs
src/kernel/src/pager/: inflight.rs  queues.rs  request.rs
src/kernel/src/processor/: ipi.rs  mp.rs  rq.rs  runqueue.rs  sched.rs  timeshare.rs
src/kernel/src/random/: jitter.rs  mod.rs
src/kernel/src/syscall/: mod.rs  object.rs  sync.rs  thread.rs
src/kernel/src/thread/: entry.rs  flags.rs  priority.rs  state.rs  suspend.rs  time.rs
src/kernel/src/trace/: buffered_trace_data.rs  mgr.rs  sink.rs  sys.rs
src/kernel/target-spec/: aarch64-unknown-none.json  x86_64-unknown-none.json
src/lib/dynlink/: Cargo.toml
src/lib/dynlink/src/: compartment.rs  context.rs  error.rs  lib.rs  library.rs  symbol.rs  tls.rs
src/lib/naming/: Cargo.toml
src/lib/naming/naming-core/: Cargo.toml
src/lib/naming/src/: lib.rs
src/lib/secgate/: Cargo.toml
src/lib/secgate/secgate-macros/: Cargo.toml
src/lib/secgate/src/: lib.rs
src/lib/twizzler/: Cargo.toml
src/lib/twizzler-abi/: Cargo.toml  README.md
src/lib/twizzler-abi/src/: alloc.rs  aux.rs  exec.rs  idcounter.rs  klog.rs  kso.rs  lib.rs  load_elf.rs  marker.rs  meta.rs  object.rs  object.rs.orig  pager.rs  rt1.rs  runtime.rs  security.rs  simple_idcounter.rs  simple_mutex.rs  slot.rs  slot.rs.orig  syscall.rs  thread.rs  thread.rs.orig  time.rs  trace.rs  upcall.rs  vcell.rs
src/lib/twizzler-async/: Cargo.toml
src/lib/twizzler-async/src/: async_source.rs  block_on.rs  event.rs  exec.rs  future.rs  lib.rs  reactor.rs  run.rs  task.rs  thread_local.rs  throttle.rs  timer.rs
src/lib/twizzler-display/: Cargo.toml
src/lib/twizzler-display/display-core/: Cargo.toml
src/lib/twizzler-display/src/: lib.rs
src/lib/twizzler-driver/: Cargo.toml
src/lib/twizzler-driver/src/: controller.rs  device.rs  dma.rs  lib.rs  request.rs
src/lib/twizzler-net/: Cargo.toml
src/lib/twizzler-net/src/: addr.rs  buffer.rs  client.rs  drivers.rs  endpoint.rs  lib.rs  nm_handle.rs  req.rs  rx_req.rs  server.rs  tx_req.rs
src/lib/twizzler-object/: Cargo.toml
src/lib/twizzler-object/src/: base.rs  box.rs  cell.rs  create.rs  init.rs  lib.rs  marker.rs  meta.rs  object.rs  ptr.rs  rc.rs  refs.rs  slot.rs  tx.rs
src/lib/twizzler-queue/: Cargo.toml
src/lib/twizzler-queue-raw/: Cargo.toml
src/lib/twizzler-queue-raw/src/: .lib.rs.swp  lib.rs
src/lib/twizzler-queue/src/: callback_queue.rs  lib.rs  queue.rs  raw.rs  sender_queue.rs
src/lib/twizzler-runtime-api/: Cargo.toml
src/lib/twizzler-runtime-api/src/: lib.rs  rt0.rs  tls.rs
src/lib/twizzler-security/: .gitignore  Cargo.toml  README.md  design.tex  flake.nix
src/lib/twizzler-security/.notes/: plan.md
src/lib/twizzler-security/benches/: capability_ops.rs
src/lib/twizzler-security/notes/: plan.md  sec_ctx_scheme.md
src/lib/twizzler-security/src/: benches.rs  builder_ext.rs  capability.rs  crypto.rs  delegation.rs  errors.rs  flags.rs  gates.rs  keys.rs  lib.rs  permissions.rs  revocation.rs  sectx.rs
src/lib/twizzler-security/tests/: basic.rs
src/lib/twizzler/src/: alloc.rs  collections.rs  ext.rs  lib.rs  marker.rs  object.rs  pager.rs  ptr.rs  tests.rs  tx.rs  util.rs
src/lib/twizzler/twizzler-derive/: Cargo.toml
src/lib/virtio-gpu/: Cargo.toml
src/lib/virtio-gpu/src/: gpu.rs  hal.rs  lib.rs  transport.rs
src/lib/virtio-input/: Cargo.toml
src/lib/virtio-input/src/: hal.rs  lib.rs  transport.rs
src/lib/virtio-net/: Cargo.toml
src/lib/virtio-net/src/: hal.rs  lib.rs  tcp.rs  transport.rs
src/rt/minimal/: Cargo.toml
src/rt/minimal/src/: lib.rs  runtime.rs
src/rt/monitor/: Cargo.toml
src/rt/monitor-api/: Cargo.toml
src/rt/monitor-api/src/: lib.rs
src/rt/monitor/secapi/: gates.rs
src/rt/monitor/src/: dlengine.rs  gates.rs  init.rs  main.rs  upcall.rs
src/rt/reference/: Cargo.toml
src/rt/reference/src/: lib.rs  pager.rs  preinit.rs  runtime.rs  syms.rs
src/runtime/bootstrap/: Cargo.toml
src/runtime/bootstrap/src/: main.rs
src/runtime/dynlink/: Cargo.toml
src/runtime/dynlink/src/: addr.rs  compartment.rs  context.rs  error.rs  lib.rs  library.rs  symbol.rs  tls.rs
src/runtime/hello-world/: Cargo.toml
src/runtime/hello-world/src/: lib.rs
tools/image_builder/: Cargo.toml
tools/image_builder/src/: main.rs
tools/initrd_gen/: Cargo.toml
tools/initrd_gen/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: build.rs  cargo.rs  disk.rs  image.rs  kani.rs  main.rs  qemu.rs  toolchain.rs  triple.rs
tools/xtask/src/toolchain/: mod.rs  pathfinding.rs  ports.rs  utils.rs
twz-candle/: Cargo.toml
twz-candle/src/: main.rs  utils.rs
(+760 files in other folders)
