
#cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "tools/xtask",
    "tools/image_builder",
    "tools/initrd_gen",
    "src/bin/init",
    "src/bin/bootstrap",
    "src/bin/devmgr",
    "src/bin/pager",
    "src/bin/mnemosyne",
    # "src/bin/random_validation",
    "src/bin/randtest",
    "src/bin/stdfs_demo",
    "src/bin/virtio",
    "src/bin/mnemosyne",
    "src/bin/stdfs_demo",
    "src/bin/virtio",
    "src/kernel",
    "src/lib/twizzler-queue-raw",
    "src/lib/twizzler-queue",
    "src/lib/twizzler-async",
    "src/lib/twizzler-object",
    "src/lib/twizzler-futures",
    "src/lib/dynlink",
    "src/lib/secgate",
    "src/lib/twizzler",
    "src/rt/monitor",
    "src/rt/monitor-api",
    "src/rt/monitor/tests/montest",
    "src/rt/monitor/tests/montest-lib",
    "src/rt",
    "src/rt/reference",
    "src/rt/minimal",
    "src/abi/rt-abi",
    "src/abi/types",
    "src/lib/logboi",
    "src/srv/logboi-srv",
    "src/bin/logboi-test", 
    "src/lib/virtio-net",
]

exclude = ["toolchain/src/rust"]
resolver = "2"

[workspace.metadata]
initrd = [
    "crate:bootstrap",
    "crate:init",
    "crate:devmgr",
    "crate:pager",
    "crate:virtio",
    "lib:twz-rt",
    "crate:monitor",
    "crate:montest",
    "lib:montest-lib",
    "crate:mnemosyne",
    "crate:stdfs_demo",
    "crate:logboi-test",
    "lib:logboi-srv",
    "crate:random_validation",
    "crate:virtio",
    "lib:twz-rt",
    "crate:monitor",
    "crate:montest",
    "lib:montest-lib",
    "crate:mnemosyne",
    "crate:stdfs_demo",
    "crate:logboi-test",
    "lib:logboi-srv",
    # "crate:random_validation",
    "crate:randtest"
    #"third-party:hello-world-rs"
]

[workspace.metadata.third-party]
# hello-world-rs = "1.0.0"

[profile.release]
debug = true

[patch.'https://github.com/dbittman/twizzler-abi']
twizzler-abi = { path = "src/lib/twizzler-abi" }

[patch.crates-io]
#ring = { git = "https://github.com/twizzler-operating-system/ring-twizzler.git", branch = "twizzler" }
getrandom = { git = "https://github.com/twizzler-operating-system/getrandom-twizzler.git", branch = "twizzler" }
polling = { git = "https://github.com/twizzler-operating-system/polling.git", branch = "twizzler" }
async-io = { git = "https://github.com/twizzler-operating-system/async-io.git", branch = "twizzler" }
async-executor = { git = "https://github.com/twizzler-operating-system/async-executor.git", branch = "twizzler" }
twizzler-futures = { path = "src/lib/twizzler-futures" }
twizzler-abi = { path = "src/lib/twizzler-abi" }
parking_lot = { git = "https://github.com/twizzler-operating-system/parking_lot.git", branch = "twizzler" }
# lock_api comes from the parking_lot repo
lock_api = { git = "https://github.com/twizzler-operating-system/parking_lot.git", branch = "twizzler" }
