
#cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "tools/xtask",
    "tools/image_builder",
    "tools/initrd_gen",
    "src/bin/init",
    "src/bin/bootstrap",
    "src/kernel",
    "src/lib/twizzler-queue-raw",
    "src/lib/twizzler-queue",
    "src/lib/twizzler-futures",
    "src/lib/twizzler-security",
    "src/lib/dynlink",
    "src/lib/secgate",
    "src/lib/twizzler",
    "src/lib/twizzler/twizzler-derive",
    "src/rt/monitor",
    "src/rt/monitor-api",
    "src/rt/monitor/tests/montest",
    "src/rt/monitor/tests/montest-lib",
    "src/rt/monitor/tests/montest-srv",
    "src/rt",
    "src/rt/reference",
    "src/rt/minimal",
    "src/lib/logboi",
    "src/srv/logboi-srv",
    "src/srv/pager-srv",
    "src/bin/logboi-test",
    "src/lib/naming/naming-core",
    "src/lib/naming",
    "src/srv/naming-srv",
    "src/lib/pager",
    "src/lib/devmgr",
    "src/srv/devmgr-srv",
    "src/bin/unittest",
    "src/bin/unittest/unittest-report",
    "src/lib/pager/pager-dynamic",
    "src/bin/uuhelper",
    "src/srv/cache-srv",
    "src/bin/cache",
    "src/srv/display-srv",
    "src/lib/twizzler-display",
    "src/srv/net-srv",

    "src/ports/lwext4-rs",
    #"src/ports/rusqlite",
    #"src/ports/rusqlite/libsqlite3-sys",

    #"src/ports/candle-test",

    "src/bin/sec",

    #"src/bin/etl_twizzler",
    #"src/bin/test-tiny-http",
    #"src/bin/random_validation",
    #"src/bin/randtest",
    #"src/bin/stdfs_demo",
    "src/lib/virtio-gpu",
    #"src/bin/ls",
    #"src/lib/devmgr",
    #"src/bin/serialecho", "tools/serialtest",
    "src/bin/stdnet_test",
    "src/bin/ptest",
    #"src/bin/sqlite_test",
    "src/bin/ptest",
    #"src/bin/persistent-hashmap-test",
    "src/bin/debug",
    "src/bin/trace",
    "src/bin/sec",
    "src/bin/schedtest",
    #"src/bin/gfxtest",
    "src/bin/stdnet_test", "src/lib/twizzler-io", "src/bin/shell",
    #"src/lib/sgtest", "src/srv/sgtest-srv",
    "src/lib/twizzler-net",
]

exclude = [
    "toolchain/src/rust",
    "src/ports/candle-test/candle",
    "src/ports/candle-test/gemm",
]
resolver = "2"

[workspace.metadata]
initrd = [
    "crate:bootstrap",
    "crate:init",
    "lib:devmgr-srv",
    "crate:monitor",
    "crate:montest",
    "lib:naming-srv",
    "lib:twz-rt",
    "lib:montest-srv",
    "lib:logboi-srv",
    "lib:pager-srv",
    "lib:cache-srv",
    "lib:display-srv",
    "lib:net-srv",
    #"lib:sgtest-srv",
    "crate:unittest",
    "crate:uuhelper",
    "crate:debug",
    "crate:cache",
    "crate:trace",
    #"crate:gfxtest",
    "crate:shell",

    "crate:sec",
    "crate:ptest",
    #"crate:sqlite_test",
    #"crate:persistent-hashmap-test",

    #"crate:twzcandle",
    #"crate:st",
    "crate:stdnet_test",

    #"third-party:hello-world-rs"
    #"crate:test-tiny-http",
    #"crate:etl_twizzler",
    #"crate:stdfs_demo",
    #"crate:random_validation",
    #"crate:random_validation",
    #"crate:randtest",
    #"crate:ls",
    #"crate:gadget",
    #"crate:serialecho",
]

[workspace.metadata.third-party]

[workspace.dependencies]
addr2line = { version = "0.25", default-features = false }
ahash = "0.8.12"
alloca = { version = "0.4", default-features = false }
anyhow = "1.0.56"
argh = "0.1.12"
arrayvec = "0.7.6"
async-channel = "2.5"
async-condvar-fair = "1.0"
async-executor = "1.9.1"
async-io = "2.3.2"
async-lock = "3.4"
async-trait = "0.1.66"
atomic = "0.6"
backtracer_core = { git = "https://github.com/twizzler-operating-system/backtracer", branch = "twizzler" }
base32 = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
base64 = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
basename = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
basenc = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
bitset-core = { version = "0.1.1", default-features = false }
bitvec = "1.0.1"
blake3 = { version = "1.8.2", default-features = false }
cache-srv = { path = "src/srv/cache-srv" }
cargo = "0.88"
cargo_metadata = "0.21"
cargo_toml = "0.21"
cat = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
cc = "1.0"
cfg-if = "1.0"
chacha20 = "0.9.1"
cksum = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
clap = "4.5.45"
clap_complete = "4.5.44"
clap_mangen = "0.2.26"
colog = "1.3.0"
colored = "3.0"
comm = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
core = "1.0.0"
csplit = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
ctor = "0.6"
cut = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
darling = "0.23"
date = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
devmgr = { path = "src/lib/devmgr" }
digest = "0.10.7"
display-srv = { path = "src/srv/display-srv" }
dynlink = { path = "src/lib/dynlink" }
echo = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
elf = "0.8"
embedded-io = "0.6"
equivalent = "1.0.2"
expand = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
factor = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
false = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
ferroc = { version = "=1.0.0-pre.4-twz", default-features = false }
fmt = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
fold = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
fs_extra = "1.3.0"
futures = "0.3.21"
futures-util = "0.3.21"
gdbstub = "0.7"
gdbstub_arch = "0.3"
getrandom = "=0.3.1"
git2 = "0.20"
gpt = "4.1"
guess_host_triple = "0.1"
happylock = "0.5.0"
heapless = "0.9"
hex-literal = { version = "1.1", default-features = false }
home = "0.5.9"
humansize = "2.1"
hwlocality = "1.0.0-alpha.8"
image = "0.25"
indicatif = "0.17.1"
intervaltree = "0.2.7"
intrusive-collections = "0.9.6"
itertools = { version = "0.14", default-features = false }
join = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
lazy-init = "0.5.1"
lazy_static = "1.5.0"
libc = "*"
limine = "0.5.0"
linked_list_allocator = "0.10"
ln = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
locate-cargo-manifest = "0.2.0"
log = "0.4.27"
logboi = { path = "src/lib/logboi" }
logboi-srv = { path = "src/srv/logboi-srv" }
lru = "0.12"
ls = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
lwext4-rs = { path = "src/ports/lwext4-rs" }
mayheap = "0.2"
memoffset = "0.9.0"
miette = "7.6.0"
modular-bitfield = "0.13"
monitor-api = { path = "src/rt/monitor-api" }
montest-lib = { path = "src/rt/monitor/tests/montest-lib" }
naming = { path = "src/lib/naming" }
naming-core = { path = "src/lib/naming/naming-core" }
naming-srv = { path = "src/srv/naming-srv" }
ndarray = "0.16"
ndarray-stats = "0.6"
nl = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
noline = "0.5"
nonoverlapping_interval_tree = { version = "0.1.3", default-features = false }
num_enum = { version = "0.7", default-features = false }
numfmt = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
nvme = { path = "src/lib/nvme-rs" }
object = { version = "0.37", default-features = false }
object-store = { path = "src/srv/pager-srv/object-store" }
obliviate-core = { version = "0.1.0", git = "https://github.com/twizzler-operating-system/obliviate.git", branch = "nonstatic_lifetime_support" }
od = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
once_cell = "1.19.0"
ouroboros = "0.18.5"
p256 = { version = "0.13.2", default-features = false }
pager = { path = "src/lib/pager" }
pager-dynamic = { path = "src/lib/pager/pager-dynamic" }
pager-srv = { path = "src/srv/pager-srv" }
parking_lot = "0.12"
pci_types = "0.10"
petgraph = "0.8"
phf = { version = "0.12", default-features = false }
phf_codegen = "0.12"
polling = "3.6.0"
pr = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
printenv = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
printf = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
printf-compat = { version = "0.3", default-features = false }
proc-macro2 = "1.0"
ptx = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
quote = "1.0"
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
rand_jitter = "0.5.0"
reqwest = "0.12.15"
secgate = { path = "src/lib/secgate" }
secgate-macros = { path = "src/lib/secgate/secgate-macros" }
semver = "1.0"
seq = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
serde = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10.8", default-features = false }
shuf = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
slab = "0.4"
slabmalloc = "0.11.0"
sleep = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
smallstr = "0.3"
sort = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
spin = "0.9"
stable-vec = { version = "0.4.1", default-features = false }
static_assertions = "1.1.0"
strum = "0.27"
strum_macros = "0.27"
sum = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
syn = "2.0"
talc = { version = "4.4", default-features = false }
tar = "0.4"
tar-no-std = "0.4"
textwrap = "0.16.1"
thiserror = { version = "2.0", default-features = false }
tick_counter = "0.4"
tinyvec = "1.10"
tokio = "1.17.0"
toml_edit = "0.22"
tr = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
tracing = "0.1.41"
tracing-log = "0.2"
tracing-subscriber = "0.3.19"
true = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
tsort = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
twizzler = { path = "src/lib/twizzler" }
twizzler-derive = { path = "src/lib/twizzler/twizzler-derive" }
twizzler-display = { path = "src/lib/twizzler-display" }
twizzler-driver = { path = "src/lib/twizzler-driver" }
twizzler-futures = { path = "src/lib/twizzler-futures" }
twizzler-kernel-macros = { version = "*", path = "src/kernel/macros" }
twizzler-minruntime = { path = "src/rt/minimal" }
twizzler-queue = { path = "src/lib/twizzler-queue" }
twizzler-runtime = { path = "src/rt" }
twizzler-security = { path = "src/lib/twizzler-security", default-features = false }
twizzler-types = { path = "src/abi/types" }
twz-rt = { path = "src/rt/reference" }
unexpand = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
uniq = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
unittest-report = { path = "src/bin/unittest/unittest-report" }
uucore = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
virtio-drivers = "0.12"
virtio-gpu = { path = "src/lib/virtio-gpu" }
wait-timeout = "0.2"
walkdir = "2.5.0"
xmas-elf = "0.10.0"
yes = { version = "0.0.30", git = "https://github.com/twizzler-operating-system/coreutils.git", branch = "twizzler" }
zerocopy = "0.8"
fatfs = "0.3"
volatile = "0.6"

[profile.release]
debug = true

[patch.'https://github.com/dbittman/twizzler-abi']
twizzler-abi = { path = "src/lib/twizzler-abi" }

[patch.crates-io]
#ring = { git = "https://github.com/twizzler-operating-system/ring-twizzler.git", branch = "twizzler" }
getrandom = { git = "https://github.com/twizzler-operating-system/getrandom-twizzler.git", branch = "twizzler" }
# Note: we can have multiple versions. This key ("getrandom02") is ignored in favor of the "package" field.
getrandom02 = { git = "https://github.com/twizzler-operating-system/getrandom-twizzler.git", branch = "twizzler-0.2", package = "getrandom" }

polling = { git = "https://github.com/twizzler-operating-system/polling.git", branch = "twizzler" }
#polling = { path = "src/ports/polling" }
async-io = { git = "https://github.com/twizzler-operating-system/async-io.git", branch = "twizzler" }
#async-io = { path = "src/ports/async-io" }
async-executor = { git = "https://github.com/twizzler-operating-system/async-executor.git", branch = "twizzler" }
#async-executor = { path = "src/ports/async-executor" }
parking_lot = { git = "https://github.com/twizzler-operating-system/parking_lot.git", branch = "twizzler" }
#parking_lot = { path = "src/ports/parking_lot" }
# lock_api comes from the parking_lot repo
lock_api = { git = "https://github.com/twizzler-operating-system/parking_lot.git", branch = "twizzler" }
#lock_api = { path = "src/ports/parking_lot/lock_api" }
#blocking = { path = "src/ports/blocking" }

#num_cpus = { git = "https://github.com/twizzler-operating-system/num_cpus.git", branch = "twizzler" }


#candle-core = { git = "https://github.com/dbittman/candle.git", branch = "dbittman" }
#candle-transformers = { git = "https://github.com/dbittman/candle.git", branch = "dbittman" }
#candle-nn = { git = "https://github.com/dbittman/candle.git", branch = "dbittman" }
#gemm-common = { git = "https://github.com/dbittman/gemm.git", branch = "dbittman-fixes" }

twizzler-futures = { path = "src/lib/twizzler-futures" }
twizzler-abi = { path = "src/lib/twizzler-abi" }
twizzler-rt-abi = { path = "src/abi/rt-abi" }
filetime = { git = "https://github.com/twizzler-operating-system/filetime.git", branch = "twizzler" }
iana-time-zone = { git = "https://github.com/twizzler-operating-system/iana-time-zone.git", branch = "twizzler" }
hostname = { git = "https://github.com/twizzler-operating-system/hostname.git", branch = "twizzler" }
ctrlc = { git = "https://github.com/twizzler-operating-system/rust-ctrlc.git", branch = "twizzler" }
#memmap2 = { git = "https://github.com/twizzler-operating-system/memmap2-rs.git", branch = "twizzler" }
memmap2 = { path = "src/ports/memmap2-rs" }
tar = { git = "https://github.com/twizzler-operating-system/tar-rs.git", branch = "twizzler" }
rusqlite = { path = "src/ports/rusqlite" }
libsqlite3-sys = { path = "src/ports/rusqlite/libsqlite3-sys" }
#sqlite3-parser = { git = "https://github.com/TheTadLands/lemon-rs.git", branch = "portv014" }
hwlocality = { path = "src/ports/hwlocality" }
hwlocality-sys = { path = "src/ports/hwlocality/hwlocality-sys" }
errno = { path = "src/ports/rust-errno" }
libc = { path = "src/ports/libc" }
ferroc = { path = "src/ports/ferroc" }
virtio-drivers = { path = "src/ports/virtio-drivers" }
#rocksdb = { path = "src/ports/rust-rocksdb" }
#librocksdb-sys = { path = "src/ports/rust-rocksdb/librocksdb-sys" }
