
[package]
name = "twizzler-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
intrusive-collections = { version = "0.9.6", features = ["nightly"] }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
twizzler-kernel-macros = { version = "*", path = "macros" }
bitflags = "2.4.1"
memoffset = "0.9.0"
xmas-elf = "0.10.0"
slabmalloc = "0.11.0"
nonoverlapping_interval_tree = { version = "0.1.3", default-features = false }
twizzler-abi = { path = "../lib/twizzler-abi", default-features = false, features = [
    "kernel",
] }
twizzler-rt-abi = { version = "0.99", features = [
    "kernel",
], default-features = false }
fixedbitset = { version = "0.5.7", default-features = false }
linked_list_allocator = "0.10"
tar-no-std = "0.3"
object = { version = "0.36.7", default-features = false, features = ["read"] }
addr2line = { version = "0.16", default-features = false, features = [
    "rustc-demangle",
] }
backtracer_core = { git = "https://github.com/twizzler-operating-system/backtracer", branch = "twizzler" }
limine = "0.2.0"
twizzler-queue-raw = { version = "*", path = "../lib/twizzler-queue-raw", default-features = false }
#syscall_encode = { version = "0.1.2" }
volatile = "0.6"
stable-vec = { version = "0.4", default-features = false, features = [] }
# for crypto
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
log = { version = "0.4", features = ["release_max_level_debug"] }
sha2 = { version = "0.10.8", default-features = false, features = [
    "force-soft",
] }
chacha20 = { version = "0.9.1", features = ["zeroize"] }
digest = "0.10.7"
rand_jitter = "0.5.0"
heapless = "0.9"
# [dev-dependencies] # kernel doesn't include dev dependencies when testing
# for testing crypto
hex-literal = { version = "0.4", default-features = false }
twizzler-security = { path = "../lib/twizzler-security", features = [
    "kernel",
], default-features = false }

[target.x86_64-unknown-none.dependencies]
rdrand = { version = "0.8.3", default-features = false }
uart_16550 = "0.3.0"
x86 = "0.52.0"
acpi = { version = "5.2.0", features = ["alloc"] }

[target.aarch64-unknown-none.dependencies]
arm64 = { package = "aarch64-cpu", version = "9.3.1" }
registers = { package = "tock-registers", version = "0.8.x" }
fdt = "0.1.5"
smccc = "0.2.0"

[target.'cfg(machine = "morello")'.dependencies]
arm-gic = "0.2.2"

[package.metadata]
twizzler-build = "kernel"
