
[package]
name = "twizzler-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
intrusive-collections = { workspace = true, features = ["nightly"] }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
twizzler-kernel-macros = { workspace = true }
bitflags = "2.4.1"
memoffset = { workspace = true }
xmas-elf = { workspace = true }
slabmalloc = { workspace = true }
nonoverlapping_interval_tree = { workspace = true }
twizzler-abi = { path = "../lib/twizzler-abi", default-features = false, features = [
    "kernel",
] }
twizzler-rt-abi = { version = "0.99", features = [
    "kernel",
], default-features = false }
linked_list_allocator = { workspace = true }
bitset-core = { workspace = true }
tar-no-std = { workspace = true }
object = { workspace = true, features = ["read"] }
addr2line = { workspace = true, features = ["rustc-demangle"] }
backtracer_core = { workspace = true }
limine = { workspace = true }
twizzler-queue-raw = { version = "*", path = "../lib/twizzler-queue-raw", default-features = false }
#syscall_encode = { version = "0.1.2" }
volatile = "0.6"
stable-vec = { workspace = true, features = [] }
# for crypto
p256 = { workspace = true, features = ["ecdsa"] }
log = { workspace = true, features = ["release_max_level_debug"] }
sha2 = { workspace = true, features = ["force-soft"] }
chacha20 = { workspace = true, features = ["zeroize"] }
digest = { workspace = true }
rand_jitter = { workspace = true }
heapless = { workspace = true }
# [dev-dependencies] # kernel doesn't include dev dependencies when testing
# for testing crypto
hex-literal = { workspace = true }
twizzler-security = { workspace = true, features = ["kernel"] }
itertools = { workspace = true }

[target.x86_64-unknown-none.dependencies]
rdrand = { version = "0.8.3", default-features = false }
uart_16550 = "0.3.0"
x86 = "0.52.0"
acpi = { version = "5.2.0", features = ["alloc"] }

[target.aarch64-unknown-none.dependencies]
arm64 = { package = "aarch64-cpu", version = "9.3.1" }
registers = { package = "tock-registers", version = "0.8.x" }
fdt = "0.1.5"
smccc = "0.2.0"

[target.'cfg(machine = "morello")'.dependencies]
arm-gic = "0.2.2"

[package.metadata]
twizzler-build = "kernel"
