[package]
name = "image_builder"
version = "0.1.0"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`
anyhow = "1.0"
fatfs = "0.3"
gpt = "3.1"
argh = "0.1.12"
clap = { version = "4.0", features = ["derive"] }

[package.metadata]
twizzler-build = "tool"
