[package]
name = "image_builder"
version = "0.1.0"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
locate-cargo-manifest = { workspace = true } # for locating the kernel's `Cargo.toml`
anyhow = { workspace = true }
fatfs = { workspace = true }
gpt = { workspace = true }
argh = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[package.metadata]
twizzler-build = "tool"
