[package]
name = "initrd_gen"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
clap = "4.0.0"
walkdir = "2.5.0"

[package.metadata]
twizzler-build = "tool"
