[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.0.0", features = ["derive"] }
fs_extra = "1.3.0"
walkdir = "2.3.2"
strum = "0.25"
anyhow = "1.0.56"
strum_macros = "0.25"
cargo = { version = "0.67.1", features = ["vendored-openssl"] }
ouroboros = "0.18.0"
reqwest = { version = "0.11.10", features = ["stream"] }
futures-util = "0.3.21"
futures = "0.3.21"
indicatif = "0.17.1"
tokio = "1.17.0"
toml_edit = "0.19.15"
tracing = "0.1"
tracing-subscriber = "0.3"
guess_host_triple = "0.1.3"

[package.metadata]
twizzler-build = "xtask"
