[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.0.0", features = ["derive"] }
fs_extra = "1.3.0"
walkdir = "2.3.2"
strum = "0.25"
anyhow = "1.0.56"
strum_macros = "0.25"

# a bug prevents us from updating to lastest cargo. newest version no longer
# seems to apply RUSTFLAGS when specified by environment, causing the build
# to be incorrect for dynamic libraries
cargo = { version = "0.83", features = ["vendored-openssl"] }

ouroboros = "0.18.0"
reqwest = { version = "0.11.10", features = ["stream"] }
futures-util = "0.3.21"
futures = "0.3.21"
indicatif = "0.17.1"
tokio = "1.17.0"
toml_edit = "0.19.15"
cargo_toml = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
guess_host_triple = "0.1.3"
home = "0.5.9"
semver = "1.0"
git2 = "0.19"
chrono = "0.4.35"

[package.metadata]
twizzler-build = "xtask"
