[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fs_extra = { workspace = true }
walkdir = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
strum_macros = { workspace = true }

# a bug prevents us from updating to lastest cargo. newest version no longer
# seems to apply RUSTFLAGS when specified by environment, causing the build
# to be incorrect for dynamic libraries
cargo = { workspace = true, features = ["vendored-openssl"] }

ouroboros = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
cargo_toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
guess_host_triple = { workspace = true }
home = { workspace = true }
semver = { workspace = true }
git2 = { workspace = true }
wait-timeout = { workspace = true }

unittest-report = { workspace = true }

[package.metadata]
twizzler-build = "xtask"
