[package]
name = "dynlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-rt-abi = "0.99"
secgate = { path = "../secgate" }
tracing = "0.1"
thiserror = "2.0"
talc = { version = "4.4", default-features = false }
anyhow = "1.0"
petgraph = "0.7"
humansize = "2.1"
bitflags = "2.4"
miette = "7.5"
itertools = "0.14"
elf = "0.7"
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
stable-vec = "0.4"
smallstr = "*"
tinyvec = { version = "*", features = ["alloc"] }
