[package]
name = "dynlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-rt-abi = "0.99"
secgate = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
talc = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
humansize = { workspace = true }
bitflags = "2.4"
miette = { workspace = true }
itertools = { workspace = true }
elf = { workspace = true }
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
stable-vec = { workspace = true }
smallstr = { workspace = true }
tinyvec = { workspace = true, features = ["alloc"] }
