[package]
name = "naming"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
arrayvec = "0.7.6"
secgate = { path = "../../lib/secgate" }
monitor-api = { path = "../../rt/monitor-api" }
twizzler-rt-abi = "0.99"
twizzler = { path = "../../lib/twizzler" }
naming-core = { path = "naming-core" }
naming-srv = { path = "../../srv/naming-srv" }