[package]
name = "secgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
#ring = { version = "*", default-features = false, features = ["alloc"] }
secgate-macros = { workspace = true }
static_assertions = { workspace = true }
alloca = { workspace = true }
twizzler-abi = { path = "../../lib/twizzler-abi" }
twizzler-rt-abi = "0.99"
stable-vec = { workspace = true }

[build-dependencies]
cc = { workspace = true }
